@@ -1,3 +1,10 @@
+2012-11-30  Alan Modra  <amodra@gmail.com>
+
+	* powerpc.cc (Powerpc_relobj::do_scan_relocs): Make STB_LOCAL
+	_GLOBAL_OFFSET_TABLE_ rather than STB_WEAK.
+	(Output_data_got_powerpc::make_header): Update _GLOBAL_OFFSET_TABLE_
+	value if it already exists.
+
 2012-11-19  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gold/14858
